# my_tensorflow_build

./: .gitignore  README.md  README_Docker_install.md
1_install_tf/: README_build.md
2_getstarted_mnist/: README.md  mnist_fashion.py  mnist_lenet.py
2_getstarted_mnist/test_cpp/: CMakeLists.txt  README.md  cvt_to_ir.sh  main.cpp
3_classify/classify_image_inceptionv3/: classify_image.py
3_classify/classify_image_inceptionv3/classify_cpp/: CMakeLists.txt  README.md  downloadmodel.sh
4_segment/: README.md
example/: .gitignore  README.md
example/classify_image_inceptionv3/: classify_image.py
example/classify_image_inceptionv3/classify_cpp/: CMakeLists.txt  README.md  copy_headers.sh
example/mnist/: README.md
example/mnist/keras_method/: mnist_lenet.py
unet_learn/: README.md  get_data_coco.py  train.py
